--- a/list.html
+++ b/list.html
@@ -47,17 +47,17 @@
                     <label for="">Product UOM<sup class="text-danger">*</sup></label>
                     <div class="py-2">
                         <div class="form-check-inline">
-                            <input class="form-check-input" type="radio" name="optradio" id="radio1"
+                            <input class="form-check-input radioBtnClass" type="radio" name="optradio" id="radio1"
                                 value="option1">
                             <label class="form-check-label" for="radio1">Kilogram</label>
                         </div>
                         <div class="form-check-inline">
-                            <input class="form-check-input" type="radio" name="optradio" id="radio2"
+                            <input class="form-check-input radioBtnClass" type="radio" name="optradio" id="radio2"
                                 value="option2">
                             <label class="form-check-label" for="radio2">Litter</label>
                         </div>
                         <div class="form-check-inline">
-                            <input class="form-check-input" type="radio" name="optradio" id="radio3"
+                            <input class="form-check-input radioBtnClass" type="radio" name="optradio" id="radio3"
                                 value="option3">
                             <label class="form-check-label" for="radio3">Pices</label>
                         </div>
